No longer need to call get_location_add_song view. Submits the form directly after automatically calling the geolocation script and updating the lat/long

--- a/soundscape_project/static/css/base_style.css
+++ b/soundscape_project/static/css/base_style.css
@@ -1,10 +1,10 @@
 body {
-	font-family: 'Overlock', cursive;
+	font-family: 'Open Sans', cursive;
 	background-color: #10bb5f;
 }
 
 #navigation {
-	background: rgba(210, 255, 231, 0.8);
+	background: rgba(240, 240, 240, 0.75);
 }
 
 
