--- a/soundscape_project/templates/soundmap/base.html
+++ b/soundscape_project/templates/soundmap/base.html
@@ -35,9 +35,9 @@
 		   				<ul class="nav navbar-nav" id="header">
 		   					<a href="/soundmap/" id="brand">Soundscape</a>
 					  		{% if user.is_authenticated%}
-					  			<p class="navbar-text"> Hello {{user.username}}! </p>
+					  			<p class="navbar-text" style="color:#e7e8d1;"> Hello {{user.username}}! </p>
 					  		{% else %}
-					  			<p class="navbar-text"> The World's Only Interactive Sound Map! </p>
+					  			<p class="navbar-text" style="color:#e7e8d1;"> The World's Only Interactive Sound Map! </p>
 					  		{% endif %}
 		   				</ul>
 				  		<ul class="nav navbar-nav navbar-right" id="right-menu">
