--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -52,7 +52,7 @@
 	    	<p>Click on a marker to hear a song!</p>
 	    </div>
     </div>
-
+    <!-- Modal dialog form for song submission -->
     <div id="dialog-form" title="Add a Song">
     	<fieldset>
     	<span class="validateTips"> All form fields are required. </span>
