--- a/soundscape_project/templates/soundmap/index.html
+++ b/soundscape_project/templates/soundmap/index.html
@@ -35,12 +35,12 @@
 		    <ul class="tab-links">
 		        <li class="active"><a href="#playlist-tab">Playlist</a></li>
 		        <li><a href="#tab2">Profile</a></li>
-		        <li><a href="#tab3">Tab #3</a></li>
+		        <li><a href="#tab3">About</a></li>
 		    </ul>
 		 
 		    <div class="tab-content">
 		        <div id="playlist-tab" class="tab active">
-		            <p>Current Playlist</p>
+		            <h2>Current Playlist</h2>
 		            {% if song_list %}
 			    		<ul id = "playlist">
 			    			<!--
@@ -58,10 +58,13 @@
 		        </div>
 		 
 		        <div id="tab2" class="tab">
-		            <p>Profile</p>
+		            <h2>My Profile</h2>
 		     	</div>
 		 
 		        <div id="tab3" class="tab">
+		        	<h2>Welcome to Soundscape!</h2>
+		        	<p>Soundscape offers a new way of exploring and sharing music. By using the Soundmap, users can click a marker to load a playlist of music uploaded by people
+		        	from that location. Get started by creating an account, uploading a song, or clicking a marker.</p>
 		        </div> 
 		    </div>
 		</div>
