--- a/soundscape_project/static/css/tab-style.css
+++ b/soundscape_project/static/css/tab-style.css
@@ -49,6 +49,7 @@
         border-radius:3px;
         box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
         background:#fefcf3;
+        height: auto;
     }
  
         .tab {
